--- a/src/components/game/styles.scss
+++ b/src/components/game/styles.scss
@@ -1,28 +1,53 @@
 @import '../../styles/imports';
 
 .container {
-    $bar-height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: calc(100vh - ($bar-height + (2 * $container-padding)));
+  $bar-height: 2rem;
+  $padding-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(
+    100vh - ($bar-height + (2 * $container-padding) + $padding-top)
+  );
+  padding-top: $padding-top;
+
+  .tickets {
+    position: absolute; // to avoid layout shift
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .cards-container {
+    margin-top: 15rem;
 
     .title {
-        text-align: center;
-        color: $golden-color;
-        text-transform: uppercase;
-        font-size: 18px;
-        margin: 0;
+      text-align: center;
+      color: $golden-color;
+      text-transform: uppercase;
+      font-size: 18px;
+      margin: 0;
     }
 
     .cards {
-        display: flex;
-        align-items: center;
-        column-gap: 1rem;
+      display: flex;
+      align-items: center;
+      column-gap: 1rem;
     }
 
-    .action {
-        display: flex;
-        justify-content: center;
+    .error {
+      position: absolute; // to avoid layout shift
+      bottom: -25%;
+      width: 100%;
+      color: $red-color;
+      text-align: center;
+      font-size: 14px;
+      font-weight: 500;
     }
+  }
+
+  .action {
+    display: flex;
+    justify-content: center;
+  }
 }
