--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $bg-to: #1d1d1d;
 $black: #070707; // main action color
 $golden-color: #d4b37f; // golden text color
 $golden-border-color: #b19b73;
-$blue-bet-amount-circle-border: #225eff; // bet amount border
+$blue-stake-circle-border: #225eff; // stake amount border
 // Violet card colors
 $blue-bg: #211f4f; // background
 $blue-border-color: #2e4d97; // card color (text)
@@ -14,7 +14,7 @@ $green-color: #19c359; // card color (text)
 // Red card colors
 $red-bg: #50091e; // background
 $red-color: #e31642; // card color (text)
-$red-border-color: #9a0f30; // card color (text)
+$red-border-color: #9a0f30; // card border color (text)
 
 $container-padding: 2rem;
 $container-max-width: 1280px;
